Fix buttons not showing up

--- a/src/css/_cardStyles.scss
+++ b/src/css/_cardStyles.scss
@@ -51,6 +51,14 @@ h4 {
   width: 45px;
 }
 
+.card-silverware-icon {
+  cursor: pointer;
+  float: right;
+  height: 50px;
+  padding-bottom: 10px;
+  width: 45px;
+}
+
 .card-photo-preview {
   background-position: 50% 50%;
   background-repeat: no-repeat;
